# crypter

./: .gitignore  Cargo.toml  README.md  my_doc.txt
src/: cli.rs  crypto.rs  main.rs
