[package]
name = "crypter_project_sk"
version = "0.1.0"
edition = "2025"

# 2. DESCRIPTION
description = "A secure file encryption tool using AES-GCM and Argon2."

# 3. LICENSE
license = "MIT"

# 4. METADATA
repository = "https://github.com/rageousk/crypter/"
keywords = ["cli", "encryption", "security", "aes-gcm", "argon2"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["std"] }
clap = { version = "4.5.49", features = ["derive"] }
rand = "0.9.2"
rpassword = "7.4.0"
